--- a/index.html
+++ b/index.html
@@ -27,5 +27,6 @@
     </main>
 
     <script type="module" src="src/scripts/index.js"></script>
+    <script type="module" src="src/scripts/variables.js"></script>
 </body>
 </html>
